shipment notify and shipment details print

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -252,7 +252,13 @@
     "OrderCreated": "Order Created",
     "Quantity": "Quantity",
     "UnitPrice": "UnitPrice",
-    "Subtotal": "Subtotal"
+    "RecipientName": "Recipient Name",
+    "CustomerEmail": "Customer Email",
+    "CustomerPhone": "Customer Phone",
+    "AddressDetails": "Address Details",
+    "OrderShippingDetails": "Order Shipping Details"
+
+
 
   }
 }
