Commit For PIK-1

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -259,6 +259,10 @@
     "OrderShippingDetails": "Order Shipping Details",
     "ShippingNumber": "Shipping Number",
     "AreYouSureToCancelOrder?": "Are You Sure To Cancel The Order?",
-    "CombineOrders": "Combine Orders"
+    "CombineOrders": "Combine Orders",
+    "Enum:TenantStatus.0": "Open",
+    "Enum:TenantStatus.1": "Closed",
+    "Enum:TenantStatus.2": "Warning",
+    "Enum:TenantStatus.3": "Suspend",
   }
 }
