--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -259,6 +259,19 @@
     "OrderShippingDetails": "Order Shipping Details",
     "ShippingNumber": "Shipping Number",
     "AreYouSureToCancelOrder?": "Are You Sure To Cancel The Order?",
-    "CombineOrders": "Combine Orders"
+    "CombineOrders": "Combine Orders",
+
+
+    //Refund
+    "Pikachu:RefundForSameOrderAlreadyExists": "Refund For Same Order Already Exists",
+    "Pikachu:RefundIsOnlyAvailableForCreditCardPayments": "Refund Is Only Available For Credit Card Payments",
+    "AreYouSureToRefundThisOrder?": "Are You Sure You Want To Refund This Order?",
+    "Refund": "Refund",
+    "Permission:Refunds": "Refund Management",
+    "SubmissionTime": "Submission Time",
+    "ReviewCompletionTime": "Review Completion Time",
+    "RefundReview": "Refund Review",
+    "PendingReview": "Pending Review",
+    "Refunded": "Refunded"
   }
 }
