--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1,278 +1,289 @@
 {
   "culture": "zh-Hant",
-  "texts": {
-    "Menu:Home": "首頁",
-    "Welcome": "歡迎",
-    "LongWelcomeMessage": "歡迎來到此商城，",
-    "Permission:GroupBuyList": "團購列表",
-    "Permission:GroupBuyReport": "團購報表",
-    "Permission:ProductList": "商品列表",
-    "Permission:ProductGroupingSetting": "商品組合設定",
-    "Permission:StockReport": "庫存報表",
-    "Permission:FreebieSetting": "贈品設定",
-    "Permission:OrderList": "訂單列表",
-    "Permission:ProductReturningList": "退換貨列表",
-    "Permission:RefundReviewingList": "退款審核列表",
-    "Permission:PaymentSetting": "金流商設定",
-    "Permission:E-InvoiceSetting": "電子發票設定",
-    "Permission:LogisticsSetting": "物流商設定",
-    "Permission:TenentList": "商戶列表",
-    "Permission:TenentBillReport": "商戶帳單報表",
-    "Permission:PermissionSetting": "權限管理",
-    "Menu:GroupBuyManagement": "團購管理",
-    "Menu:GroupBuyListView": "團購列表",
-    "Menu:GroupBuyReports": "團購報表",
-    "Menu:GroupBuyPageConfig": "團購頁面設定",
-    "Menu:FreebiesListView": "贈品清單",
-    "Menu:ProductManagement": "商品管理",
-    "Menu:GoodsList": "商品列表",
-    "Menu:GroupGoodsManagement": "商品組管理",
-    "Menu:OrderManagement": "訂單管理",
-    "Menu:PaymentManagement": "金流管理",
-    "Menu:LogisticsManagement": "物流管理",
-    "Permission:GoodsList": "商品列表",
-    "Permission:GoodsGroupingSetting": "商品組管理",
-    "Permission:POList": "訂單列表",
-    "Permission:POReturningList": "訂單退貨列表",
-    "Permission:RefundAuditList": "訂單退款列表",
-    "Permission:PaymentGatewaySetting": "金流管理",
-    "Permission:InvoiceSetting": "發票管理",
-    "CreatedTime": "建立時間",
-    "Cancel": "取消",
-    "Preview": "預覽",
-    "Save": "儲存",
-    "Upload": "上傳",
-    "SelectAll": "全選",
-    "NewGroupBuy": "建立新團購",
+    "texts": {
+        "Menu:Home": "首頁",
+        "Welcome": "歡迎",
+        "LongWelcomeMessage": "歡迎來到此商城，",
+        "Permission:GroupBuyList": "團購列表",
+        "Permission:GroupBuyReport": "團購報表",
+        "Permission:ProductList": "商品列表",
+        "Permission:ProductGroupingSetting": "商品組合設定",
+        "Permission:StockReport": "庫存報表",
+        "Permission:FreebieSetting": "贈品設定",
+        "Permission:OrderList": "訂單列表",
+        "Permission:ProductReturningList": "退換貨列表",
+        "Permission:RefundReviewingList": "退款審核列表",
+        "Permission:PaymentSetting": "金流商設定",
+        "Permission:E-InvoiceSetting": "電子發票設定",
+        "Permission:LogisticsSetting": "物流商設定",
+        "Permission:TenentList": "商戶列表",
+        "Permission:TenentBillReport": "商戶帳單報表",
+        "Permission:PermissionSetting": "權限管理",
+        "Menu:GroupBuyManagement": "團購管理",
+        "Menu:GroupBuyListView": "團購列表",
+        "Menu:GroupBuyReports": "團購報表",
+        "Menu:GroupBuyPageConfig": "團購頁面設定",
+        "Menu:FreebiesListView": "贈品清單",
+        "Menu:ProductManagement": "商品管理",
+        "Menu:GoodsList": "商品列表",
+        "Menu:GroupGoodsManagement": "商品組管理",
+        "Menu:OrderManagement": "訂單管理",
+        "Menu:PaymentManagement": "金流管理",
+        "Menu:LogisticsManagement": "物流管理",
+        "Permission:GoodsList": "商品列表",
+        "Permission:GoodsGroupingSetting": "商品組管理",
+        "Permission:POList": "訂單列表",
+        "Permission:POReturningList": "訂單退貨列表",
+        "Permission:RefundAuditList": "訂單退款列表",
+        "Permission:PaymentGatewaySetting": "金流管理",
+        "Permission:InvoiceSetting": "發票管理",
+        "CreatedTime": "建立時間",
+        "Cancel": "取消",
+        "Preview": "預覽",
+        "Save": "儲存",
+        "Upload": "上傳",
+        "SelectAll": "全選",
+        "NewGroupBuy": "建立新團購",
 
-    //items
-    "NewItem": "建立新商品",
-    "Items": "商品列表",
-    "CopyItem": "複製商品",
-    "DeleteItem": "刪除商品",
-    "TurnItemOn": "開啟商品",
-    "ItemName": "商品名稱",
-    "PropertyName": "樣式名稱",
-    "ItemDescriptionTitle": "商品敘述抬頭",
-    "ItemDescription": "商品敘述",
-    "ItemPriceAndInventory": "商品價格和庫存",
-    "PreviewPage": "預覽頁面",
-    "ItemImage": "商品圖片",
-    "ItemTags": "商品標籤",
-    "ItemStyle": "商品樣式",
-    "ItemStyleKey": "商品樣式名稱",
-    "ItemStyleValue": "商品樣式內容",
-    "AddItemStyleButton": "建立新屬性",
-    "PriceAndInventory": "商品價格和庫存",
-    "SKU": "SKU",
-    "SellPrice": "售價",
-    "InventoryAccount": "倉儲帳戶",
-    "GroupBuyPrice": "團購價",
-    "SaleableQuantity": "可銷售數量",
-    "SaleablePreorderQuantity": "可銷售預購數量",
-    "PreorderQuantity": "預購數量",
-    "CommodityAttributes": "商品屬性",
-    "TimeLimitPeriod": "銷售區間",
-    "StartDate": "起始時間",
-    "EndDate": "結束時間",
-    "LimitQuantity": "限購數量",
-    "ShareProfit": "分潤比例",
-    "FreeShipping": "免運費",
-    "Returnable": "可退貨",
-    "ShippingMethod": "配送方式",
-    "SalePrice": "售價",
-    "TaxType": "稅務類別",
-    "NewTag": "新類別",
-    "SellingPrice": "售價",
-    "Pikachu:ItemNameCannotBeNull": "商品名稱不能為空值",
-    "Pikachu:GroupBuyNameCannotBeNull": "團購名稱不能為空值",
-    "Pikachu:ItemWithSameNameAlreadyExists": "商品名稱不能重複",
-    "Pikachu:ItemDetailsCannotBeEmpty": "商品細節不能為空",
-    "Pikachu:ItemWithSKUAlreadyExists": "商品SKU不能重複",
-    "Pikachu:SKUForItemDetailsCannotBeNull": "SKU for Item Detail Cannot be null",
-    "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "售價必須大於0",
-    "CopyToAll": "複製到全部",
-    "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
-    "GenerateSKU": "產生SKU",
-    "SKUPreview": "SKU預覽",
-    "SeparatedBy": "分別符號",
-    "CaseUsed": "使用大小寫",
-    "UpperCase": "大寫",
-    "LowerCase": "小寫",
-    "ConfigureYourSKUPattern": "設置SKU格式",
-    "ConfigureYourSKUPatternMessage": "選取你想要設置該商品屬性的SKU",
-    "SampleValue": "樣本值",
-    "Show": "顯示",
-    "First": "前置",
-    "Last": "後置",
-    "Letters": "字母",
-    "Pikachu:SystemIsUnableToCopyAtTheMoment": "目前無法複製,請稍後再試",
-    "Pikachu:SomethingWentWrongWhileDeletingImage": "在刪除圖像時發生錯誤,請稍後再試",
-    "Pikachu:AreYouSureToDeleteImage": "是否確認要刪除此圖像?",
-    "Pikachu:SomethingWrongWhileFileUpload": "再上傳檔案時發生問題,請稍後再試",
-    "Pikachu:FilesAreGreaterThanMaxAllowedFileSize": "檔案大小已超過上限",
-    "Pikachu:AlreadyUploadMaxAllowedFiles": "已達到本商品最大圖像數量上限",
-    "Pikachu:FilesExceedMaxAllowedPerUpload": "已超過單次可上傳檔案數量上限",
-    "AreYouSureToDeleteSelectedItem": "請確認是否要刪除已選擇商品?",
-    "DeleteSelected": "刪除",
-    "NewSetItem": "新商品組",
-    "NotFound": "查無此物",
-    "EditSetItem": "編輯商品組",
-    "Pikachu:EntityWithGivenIdDoesnotExist": "查無此ID的物件",
+        //items
+        "NewItem": "建立新商品",
+        "Items": "商品列表",
+        "CopyItem": "複製商品",
+        "DeleteItem": "刪除商品",
+        "TurnItemOn": "開啟商品",
+        "ItemName": "商品名稱",
+        "PropertyName": "樣式名稱",
+        "ItemDescriptionTitle": "商品敘述抬頭",
+        "ItemDescription": "商品敘述",
+        "ItemPriceAndInventory": "商品價格和庫存",
+        "PreviewPage": "預覽頁面",
+        "ItemImage": "商品圖片",
+        "ItemTags": "商品標籤",
+        "ItemStyle": "商品樣式",
+        "ItemStyleKey": "商品樣式名稱",
+        "ItemStyleValue": "商品樣式內容",
+        "AddItemStyleButton": "建立新屬性",
+        "PriceAndInventory": "商品價格和庫存",
+        "SKU": "SKU",
+        "SellPrice": "售價",
+        "InventoryAccount": "倉儲帳戶",
+        "GroupBuyPrice": "團購價",
+        "SaleableQuantity": "可銷售數量",
+        "SaleablePreorderQuantity": "可銷售預購數量",
+        "PreorderQuantity": "預購數量",
+        "CommodityAttributes": "商品屬性",
+        "TimeLimitPeriod": "銷售區間",
+        "StartDate": "起始時間",
+        "EndDate": "結束時間",
+        "LimitQuantity": "限購數量",
+        "ShareProfit": "分潤比例",
+        "FreeShipping": "免運費",
+        "Returnable": "可退貨",
+        "ShippingMethod": "配送方式",
+        "SalePrice": "售價",
+        "TaxType": "稅務類別",
+        "NewTag": "新類別",
+        "SellingPrice": "售價",
+        "Pikachu:ItemNameCannotBeNull": "商品名稱不能為空值",
+        "Pikachu:GroupBuyNameCannotBeNull": "團購名稱不能為空值",
+        "Pikachu:ItemWithSameNameAlreadyExists": "商品名稱不能重複",
+        "Pikachu:ItemDetailsCannotBeEmpty": "商品細節不能為空",
+        "Pikachu:ItemWithSKUAlreadyExists": "商品SKU不能重複",
+        "Pikachu:SKUForItemDetailsCannotBeNull": "SKU for Item Detail Cannot be null",
+        "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "售價必須大於0",
+        "CopyToAll": "複製到全部",
+        "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
+        "GenerateSKU": "產生SKU",
+        "SKUPreview": "SKU預覽",
+        "SeparatedBy": "分別符號",
+        "CaseUsed": "使用大小寫",
+        "UpperCase": "大寫",
+        "LowerCase": "小寫",
+        "ConfigureYourSKUPattern": "設置SKU格式",
+        "ConfigureYourSKUPatternMessage": "選取你想要設置該商品屬性的SKU",
+        "SampleValue": "樣本值",
+        "Show": "顯示",
+        "First": "前置",
+        "Last": "後置",
+        "Letters": "字母",
+        "Pikachu:SystemIsUnableToCopyAtTheMoment": "目前無法複製,請稍後再試",
+        "Pikachu:SomethingWentWrongWhileDeletingImage": "在刪除圖像時發生錯誤,請稍後再試",
+        "Pikachu:AreYouSureToDeleteImage": "是否確認要刪除此圖像?",
+        "Pikachu:SomethingWrongWhileFileUpload": "再上傳檔案時發生問題,請稍後再試",
+        "Pikachu:FilesAreGreaterThanMaxAllowedFileSize": "檔案大小已超過上限",
+        "Pikachu:AlreadyUploadMaxAllowedFiles": "已達到本商品最大圖像數量上限",
+        "Pikachu:FilesExceedMaxAllowedPerUpload": "已超過單次可上傳檔案數量上限",
+        "AreYouSureToDeleteSelectedItem": "請確認是否要刪除已選擇商品?",
+        "DeleteSelected": "刪除",
+        "NewSetItem": "新商品組",
+        "NotFound": "查無此物",
+        "EditSetItem": "編輯商品組",
+        "Pikachu:EntityWithGivenIdDoesnotExist": "查無此ID的物件",
 
-    //GroupBuy
-    "NewGroupBuy": "建立新團購",
-    "EditGroupBuy": "編輯團購",
-    "SalesURL1": "銷售連結1",
-    "SalesURL2": "銷售連結2",
-    "SalesURL": "銷售連結",
-    "GroupBuyName": "團購名稱",
-    "Subject": "團購主題",
-    "GroupBuyShortName": "團購簡稱",
-    "GroupBuyLogo": "團購LOGO",
-    "GroupBuyBanner": "團購橫幅",
-    "CarouselImages": "輪播圖",
-    "GroupBuyTime": "團購期間",
-    "Logistic": "物流",
-    "ExcludeShippingMethod": "排除運送方式",
-    "AllowShipToOuterIsland": "可寄送外島",
-    "AllowShipToOverSea": "可寄送海外",
-    "ExpectDeliveryDate": "指定期望配達日期",
-    "Invoice": "發票",
-    "IssueInvoice": "開立發票",
-    "AutoIssueTriplicateInvoice": "自動開立三聯式電子發票",
-    "InvoiceComment": "電子發票開立備註",
-    "AdvanceSetting": "進階設定",
-    "HideCredention": "團購報表隱藏部分個資",
-    "InviteCode": "團購邀請碼",
-    "ProfitShare": "分潤",
-    "GateWay": "金流",
-    "Gateway": "金流",
-    "PaymentMethod": "付款方式",
-    "GroupBuyPolicy": "團購內容",
-    "GroupBuyCondition": "團購注意事項",
-    "CustomerInformation": "訂購人資訊",
-    "ExchangePolicy": "退換貨說明",
-    "NotifyEmail": "通知信件文案",
-    "AddModule": "新增模塊",
-    "DefaultPaymentGateWay": "預設付款方式",
-    "ProductImageModule": "商品圖片模組",
-    "SelectItem": "選取商品",
-    "ProductDescriptionModule": "商品敘述模組",
-    "ProductGroupModule": "商品選購模組",
-    "SelectModule": "選擇頁面模組",
-    "uploadUpto5Images": "最多上傳5張圖片",
-    "uploadUpto10Images": "最多上傳10張圖片",
-    "GroupBuyList": "團購列表",
-    "AVAILABILITY": "上/下架",
-    "Select": "選取",
-
-
-    //SetItem
-    "SetItem": "商品組",
-    "AddItem": "新增商品",
-    "ChooseItem": "選擇商品",
-    "ItemList": "商品清單",
-    "SetItemPrice": "設定商品組價格",
-
-    //Freebie
-    "NewFreebie": "建立新贈品",
-    "EditFreebie": "編輯贈品",
-    "ItemImages": "商品照片",
-    "ChooseGroupBuy": "選擇套用團購",
-    "ApplyToAllGroupBuys": "套用至全部團購",
-    "SelectGroupsBuys": "選擇團購",
-    "SelectGroupBuys": "選擇團購",
-    "ApplyCondition": "套用條件",
-    "Uncondition": "沒有條件",
-    "AmountReach": "當訂單到達",
-    "Get": "獲得",
-    "Piece": "件",
-    "ActivityDate": "活動日期",
-    "FreebieAmount": "贈品數量",
-    "WhenOrderReach": "當訂單達到",
-    "MinimumAmount": "最低金額",
-    "MinimumPiece": "最低數量",
-    "Pikachu:FreebieAmountCannotBeZero": "贈品數量必須大於0",
-    "Pikachu:SelectAtLeastOneGroupBuy": "請至少選擇1個團購",
-    "Pikachu:SelectAtLeastOneImage": "請至少選擇一個圖像",
-    "ActivityTimePeriod": "活動期間",
-    "Pikachu:InvalidItemName": "商品名稱無效",
-    "Pikachu:FreebieWithSameNameAlreadyExists": "商品名稱不能重複",
-    "FreebiesList": "贈品清單",
-
-    //Orders
-    "Order": "訂單",
-    "Menu:Orders": "訂單管理",
-    "OrderNo": "訂單號碼",
-    "OrderDate": "訂購日期",
-    "CustomerName": "客戶名稱",
-    "Email": "Email",
-    "OrderStatus": "訂單狀態",
-    "ShippingStatus": "物流狀態",
-    "CheckoutAmount": "結帳金額",
-    "BankTransfer": "銀行轉帳",
-    "CreditCard": "信用卡",
-    "LinePay": "Line Pay",
-    "RecipientInformation": "收貨人資訊",
-    "PickupTheGoodsWithoutPayment": "Pickup The Goods Without Payment",
-    "AllHandOverTheGoodsWithoutPayment": "All Handover The Goods Without Payment",
-    "BlackCatHomeDelivery": "黑貓宅急便",
-    "OrderItems": "訂單項目",
-    "Address": "地址",
-    "Remarks": "Remarks",
-    "MerchantRemarks": "商家備註",
-    "CombineOrders": "合併訂單",
-    "Open": "開啟",
-    "Closed": "關閉",
-    "Returned": "退貨",
-    "OrderDetails": "訂單細項",
-    "CancelOrder": "取消訂單",
-    "ExchangeItem": "換貨",
-    "SplitOrder": "拆單",
-    "Print": "列印",
-    "PrintOrder": "列印訂單",
-    "OrderInformation": "訂購人資訊",
-    "TaxNumber": "統編",
-    "InvoiceCarrier": "載具",
-    "ApplyRefund": "執行退款",
-    "ShipmentNotify": "物流通知",
-    "Recipient": "收貨人",
-    "RecipientPhoneNumber": "收貨人聯絡電話",
-    "RecipientAddress": "收貨人地址",
-    "RecipientComments": "收貨人備註",
-    "StoreComments": "商家備註",
-    "StoreCommentsHistory": "商家備註歷史紀錄",
-    "Total": "總金額",
-    "DeliveryFee": "運費",
-    "Subtotal": "小記",
-    "SubTotal": "小記",
-    "Permission:Orders": "訂單管理",
-    "Permission:AddStoreComments": "新增商家備註",
-    "WaitingForPayment": "等待付款中",
-    "PrepareShipment": "處理中",
-    "PersonalInvoice": "Personal Invoice",
-    "CellphoneInvoice": "Cellphone Invoice",
-    "BusinessInvoice": "Business Invoice",
-    "SaveChanges": "Save Changes",
-    "HomeDelivery": "宅配",
-    "OrderCreated": "訂單成立",
-    "Telephone": "電話",
-    "Quantity": "數量",
-    "UnitPrice": "單價",
-    "Date": "日期",
+        //GroupBuy
+        "NewGroupBuy": "建立新團購",
+        "EditGroupBuy": "編輯團購",
+        "SalesURL1": "銷售連結1",
+        "SalesURL2": "銷售連結2",
+        "SalesURL": "銷售連結",
+        "GroupBuyName": "團購名稱",
+        "Subject": "團購主題",
+        "GroupBuyShortName": "團購簡稱",
+        "GroupBuyLogo": "團購LOGO",
+        "GroupBuyBanner": "團購橫幅",
+        "CarouselImages": "輪播圖",
+        "GroupBuyTime": "團購期間",
+        "Logistic": "物流",
+        "ExcludeShippingMethod": "排除運送方式",
+        "AllowShipToOuterIsland": "可寄送外島",
+        "AllowShipToOverSea": "可寄送海外",
+        "ExpectDeliveryDate": "指定期望配達日期",
+        "Invoice": "發票",
+        "IssueInvoice": "開立發票",
+        "AutoIssueTriplicateInvoice": "自動開立三聯式電子發票",
+        "InvoiceComment": "電子發票開立備註",
+        "AdvanceSetting": "進階設定",
+        "HideCredention": "團購報表隱藏部分個資",
+        "InviteCode": "團購邀請碼",
+        "ProfitShare": "分潤",
+        "GateWay": "金流",
+        "Gateway": "金流",
+        "PaymentMethod": "付款方式",
+        "GroupBuyPolicy": "團購內容",
+        "GroupBuyCondition": "團購注意事項",
+        "CustomerInformation": "訂購人資訊",
+        "ExchangePolicy": "退換貨說明",
+        "NotifyEmail": "通知信件文案",
+        "AddModule": "新增模塊",
+        "DefaultPaymentGateWay": "預設付款方式",
+        "ProductImageModule": "商品圖片模組",
+        "SelectItem": "選取商品",
+        "ProductDescriptionModule": "商品敘述模組",
+        "ProductGroupModule": "商品選購模組",
+        "SelectModule": "選擇頁面模組",
+        "uploadUpto5Images": "最多上傳5張圖片",
+        "uploadUpto10Images": "最多上傳10張圖片",
+        "GroupBuyList": "團購列表",
+        "AVAILABILITY": "上/下架",
+        "Select": "選取",
 
 
-    //Refund
-    "Pikachu:RefundForSameOrderAlreadyExists": "同一訂單已存在退款",
-    "Pikachu:RefundIsOnlyAvailableForCreditCardPayments": "退款僅適用於信用卡付款",
-    "AreYouSureToRefundThisOrder?": "您確定要對訂單退款嗎？",
-    "Refund": "退款",
-    "Permission:Refunds": "退款管理",
-    "SubmissionTime": "提交時間",
-    "ReviewCompletionTime": "審核完成時間",
-    "RefundReview": "退款審核",
-    "PendingReview": "待審核",
-    "Refunded": "已退款"
-  }
+        //SetItem
+        "SetItem": "商品組",
+        "AddItem": "新增商品",
+        "ChooseItem": "選擇商品",
+        "ItemList": "商品清單",
+        "SetItemPrice": "設定商品組價格",
+
+        //Freebie
+        "NewFreebie": "建立新贈品",
+        "EditFreebie": "編輯贈品",
+        "ItemImages": "商品照片",
+        "ChooseGroupBuy": "選擇套用團購",
+        "ApplyToAllGroupBuys": "套用至全部團購",
+        "SelectGroupsBuys": "選擇團購",
+        "SelectGroupBuys": "選擇團購",
+        "ApplyCondition": "套用條件",
+        "Uncondition": "沒有條件",
+        "AmountReach": "當訂單到達",
+        "Get": "獲得",
+        "Piece": "件",
+        "ActivityDate": "活動日期",
+        "FreebieAmount": "贈品數量",
+        "WhenOrderReach": "當訂單達到",
+        "MinimumAmount": "最低金額",
+        "MinimumPiece": "最低數量",
+        "Pikachu:FreebieAmountCannotBeZero": "贈品數量必須大於0",
+        "Pikachu:SelectAtLeastOneGroupBuy": "請至少選擇1個團購",
+        "Pikachu:SelectAtLeastOneImage": "請至少選擇一個圖像",
+        "ActivityTimePeriod": "活動期間",
+        "Pikachu:InvalidItemName": "商品名稱無效",
+        "Pikachu:FreebieWithSameNameAlreadyExists": "商品名稱不能重複",
+        "FreebiesList": "贈品清單",
+
+        //Orders
+        "Order": "訂單",
+        "Menu:Orders": "訂單管理",
+        "OrderNo": "訂單號碼",
+        "OrderDate": "訂購日期",
+        "CustomerName": "客戶名稱",
+        "Email": "Email",
+        "OrderStatus": "訂單狀態",
+        "ShippingStatus": "物流狀態",
+        "CheckoutAmount": "結帳金額",
+        "BankTransfer": "銀行轉帳",
+        "CreditCard": "信用卡",
+        "LinePay": "Line Pay",
+        "RecipientInformation": "收貨人資訊",
+        "PickupTheGoodsWithoutPayment": "Pickup The Goods Without Payment",
+        "AllHandOverTheGoodsWithoutPayment": "All Handover The Goods Without Payment",
+        "BlackCatHomeDelivery": "黑貓宅急便",
+        "OrderItems": "訂單項目",
+        "Address": "地址",
+        "Remarks": "Remarks",
+        "MerchantRemarks": "商家備註",
+        "CombineOrders": "合併訂單",
+        "Open": "開啟",
+        "Closed": "關閉",
+        "Returned": "退貨",
+        "OrderDetails": "訂單細項",
+        "CancelOrder": "取消訂單",
+        "ExchangeItem": "換貨",
+        "SplitOrder": "拆單",
+        "Print": "列印",
+        "PrintOrder": "列印訂單",
+        "OrderInformation": "訂購人資訊",
+        "TaxNumber": "統編",
+        "InvoiceCarrier": "載具",
+        "ApplyRefund": "執行退款",
+        "ShipmentNotify": "物流通知",
+        "Recipient": "收貨人",
+        "RecipientPhoneNumber": "收貨人聯絡電話",
+        "RecipientAddress": "收貨人地址",
+        "RecipientComments": "收貨人備註",
+        "StoreComments": "商家備註",
+        "StoreCommentsHistory": "商家備註歷史紀錄",
+        "Total": "總金額",
+        "DeliveryFee": "運費",
+        "Subtotal": "小記",
+        "SubTotal": "小記",
+        "Permission:Orders": "訂單管理",
+        "Permission:AddStoreComments": "新增商家備註",
+        "WaitingForPayment": "等待付款中",
+        "PrepareShipment": "處理中",
+        "PersonalInvoice": "Personal Invoice",
+        "CellphoneInvoice": "Cellphone Invoice",
+        "BusinessInvoice": "Business Invoice",
+        "SaveChanges": "Save Changes",
+        "HomeDelivery": "宅配",
+        "OrderCreated": "訂單成立",
+        "Telephone": "電話",
+        "Quantity": "數量",
+        "UnitPrice": "單價",
+        "Date": "日期",
+        "RecipientName": "收貨人姓名",
+        "CustomerEmail": "收貨人電子郵箱",
+        "CustomerPhone": "收貨人電話",
+        "AddressDetails": "詳細地址",
+        "OrderShippingDetails": "訂單派送細節",
+        "ShippingNumber": "派送單號",
+        "AreYouSureToCancelOrder?": "你確定要取消訂單?",
+
+
+        //Refund
+        "Pikachu:RefundForSameOrderAlreadyExists": "同一訂單已存在退款",
+        "Pikachu:RefundIsOnlyAvailableForCreditCardPayments": "退款僅適用於信用卡付款",
+        "AreYouSureToRefundThisOrder?": "您確定要對訂單退款嗎？",
+        "Refund": "退款",
+        "Permission:Refunds": "退款管理",
+        "SubmissionTime": "提交時間",
+        "ReviewCompletionTime": "審核完成時間",
+        "RefundReview": "退款審核",
+        "PendingReview": "待審核",
+        "Refunded": "已退款",
+        "Enum:TenantStatus.0": "正常",
+        "Enum:TenantStatus.1": "關閉",
+        "Enum:TenantStatus.2": "警示",
+        "Enum:TenantStatus.3": "暫停"
+    }
 }
