--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -292,7 +292,7 @@
     "AmountReceived/AmountReceivedExcludingShipping": "Amount Received / Amount Received (Excluding Shipping Cost)",
     "SalesAmountMinusShippingCosts": "Sales Amount (Minus Shipping Costs)",
     "BloggersShareProfit": "Bloggers Share Profit",
-
+    "DownloadExcel": "Download Excel",
 
 
     //Cash Flow Settings
