logistics providers implementations

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -348,14 +348,28 @@
     "CustomTitle": "Custom Title",
     "MainIslands": "Main Islands",
     "OuterIslands": "Outer Islands",
-    "Taipei": "Taipei",
-    "Taoyuan": "Taoyuan",
+    "TaipeiCity": "Taipei City",
+    "NewTaipeiCity": "New Taipei City",
+    "Keelung": "Keelung",
     "Hsinchu": "Hsinchu",
+    "Taoyuan": "Taoyuan",
+    "Yilan": "Yilan",
     "Taichung": "Taichung",
-    "Tainan": "Tainan",
+    "Miaoli": "Miaoli",
+    "Changhua": "Changhua",
+    "Nantou": "Nantou",
+    "Yunlin": "Yunlin",
     "Kaohsiung": "Kaohsiung",
+    "Tainan": "Tainan",
+    "ChiayiCity": "Chiayi City",
+    "ChiayiCounty": "Chiayi County",
+    "PingDong": "Ping Dong",
+    "Hualien": "Hualien",
+    "Taitung": "Taitung",
     "Penghu": "Penghu",
     "Kinmen": "Kinmen",
-    "Mazu": "Mazu"
+    "Mazu": "Mazu",
+    "AreYouSureToUpdateGreenWorld?": "Are You Sure To Update Green World Logistics?",
+    "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?"
   }
 }
