tasks done and implemented loader on items

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -111,6 +111,11 @@
     "NotFound": "Not Found",
     "EditSetItem": "Edit Set Item",
     "Pikachu:EntityWithGivenIdDoesnotExist": "Entity With Given Id Does not Exist",
+    "ItemTemperature": "Item Temperature",
+    "Normal": "Normal",
+    "Freeze": "Freeze",
+    "Frozen": "Frozen",
+
 
     //GroupBuy
     "NewGroupBuy": "New Group Buy",
