localized page title

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1,6 +1,7 @@
 {
   "culture": "en",
   "texts": {
+    "GoodPoint": "Good Point",
     "Menu:Home": "Home",
     "Menu:GroupBuyManagement": "Group Buy Management",
     "Menu:GroupBuyListView": "Group Buy ListView",
