--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1,6 +1,7 @@
 {
   "culture": "zh-Hant",
   "texts": {
+    "GoodPoint": "點點",
     "Menu:Home": "首頁",
     "Welcome": "歡迎",
     "LongWelcomeMessage": "歡迎來到此商城，",
