--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -290,6 +290,99 @@
 
     "DeliveryTemperatureCost": "Delivery Temperature Cost",
     "Cost": "Cost",
-    "CostUpdateSuccessfully": "Cost Update Successfully"
+    "CostUpdateSuccessfully": "Cost Update Successfully",
+
+
+    //Groupbuy Report
+    "GroupbuyReport": "團購報表",
+    "TotalQuantity": "加總數量",
+    "TotalAmount": "總金額",
+    "PaidAmount": "付款金額",
+    "ReportUrl": "報表連結",
+    "OrderQuantityPaid/TotalOrderQuantity": "訂購數量 (已付款) / 加總數量",
+    "SalesAmount/SalesAmountExcludingShipping": "銷售額 / 銷售額 (不含運費)",
+    "AmountReceived/AmountReceivedExcludingShipping": "已收款項 / 已收款項 (不包含運費)",
+    "SalesAmountMinusShippingCosts": "銷售額 (不含運費)",
+    "BloggersShareProfit": "團主分潤",
+    "DownloadExcel": "下載Excel",
+
+
+    //Cash Flow Settings
+    "CashFlowDealerSettings": "金流渠道設定",
+    "EcPay": "綠界支付",
+    "ChinaTrust": "中國信託",
+    "Enable/Disable": "開啟/關閉",
+    "ChannelId": "Channel ID",
+    "ChannelSecretKey": "Channel Secret Key",
+    "Code": "Code",
+    "MerchantId": "Merchant ID",
+    "TerminalCode": "Terminal Code",
+    "CodeValue": "Code Value",
+    "HashKey": "Hash Key",
+    "HashIV": "Hash IV",
+    "TradeDescription": "交易訊息",
+
+
+    //Email Settings
+    "EmailSettings": "郵件設定",
+    "SenderName": "發送者名稱",
+    "Greetings": "開頭訊息",
+    "Footer": "結尾訊息",
+    "AutomaticEmailing": "自動發信",
+    "TradeName": "交易名稱",
+    "ReceipientMailbox": "收件者信箱",
+    "SendInterval": "發送間隔",
+    "SendTime": "發送時間",
+    "CreateAutomaticEmails": "建立自動發信",
+    "RecipientMailbox": "收件者信箱",
+    "InvalidTradeName": "無效的交易名稱",
+    "InvalidRecipients": "無效的收件人",
+    "InvalidStartDate": "無效的開始日期",
+    "InvalidEndDate": "無效的結束日期",
+    "InvalidSendTime": "無效的發送時間",
+    "InvalidGroupBuys": "請選擇團購",
+    "EditAutomaticEmails": "編輯自動發信",
+    "Daily": "每日",
+    "Weekly": "每周",
+    "RecurrenceType": "重複類型",
+    "WeeklyEmailsAreSentOutOnSundaySpecifiedTime": "每周的郵件將在每個周日的指定時間發出",
+
+
+    //LogisticsManagement
+    "LogisticsProviderSettings": "物流商設定",
+    "GreenWorldLogistics": "綠界物流",
+    "SenderPhoneNumber": "發送者電話",
+    "LogisticsType": "物流類型",
+    "LogisticsSubType": "物流子類型",
+    "FreeShippingThreshold": "免運費",
+    "Freight": "貨運",
+    "StoreCode": "Store Code",
+    "SaveSettings": "儲存設定",
+    "CustomTitle": "自訂抬頭",
+    "MainIslands": "本島",
+    "OuterIslands": "外島",
+    "TaipeiCity": "台北市",
+    "NewTaipeiCity": "新北市",
+    "Keelung": "基隆",
+    "Hsinchu": "新竹",
+    "Taoyuan": "桃園",
+    "Yilan": "宜蘭",
+    "Taichung": "台中",
+    "Miaoli": "苗栗",
+    "Changhua": "彰化",
+    "Nantou": "南投",
+    "Yunlin": "雲林",
+    "Kaohsiung": "高雄",
+    "Tainan": "台南",
+    "ChiayiCity": "嘉義市",
+    "ChiayiCounty": "嘉義縣",
+    "PingDong": "屏東",
+    "Hualien": "花蓮",
+    "Taitung": "台東",
+    "Penghu": "澎湖",
+    "Kinmen": "金門",
+    "Mazu": "馬祖",
+    "AreYouSureToUpdateGreenWorld?": "你確定要更新綠界物流設定?",
+    "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?"
   }
 }
