short code localization

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -381,6 +381,7 @@
     "Kinmen": "Kinmen",
     "Mazu": "Mazu",
     "AreYouSureToUpdateGreenWorld?": "Are You Sure To Update Green World Logistics?",
-    "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?"
+    "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?",
+    "ShortCode": "Short Code"
   }
 }
