--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -394,6 +394,7 @@
     "Kinmen": "金門",
     "Mazu": "馬祖",
     "AreYouSureToUpdateGreenWorld?": "你確定要更新綠界物流設定?",
-    "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?"
+    "AreYouSureToUpdateHomeDelivery?": "Are You Sure To Update Home Delivery?",
+    "ShortCode": "轉址編號"
   }
 }
